2008-01-03  Akim Demaille  <demaille@gostai.com>

	Don't use maud_CPPFLAGS uselessly.
	* Makefile.am: So that Automake doesn't feel obliged to create
	special compilation rules with libport_la- prefixed object files.

2008-01-03  Akim Demaille  <demaille@gostai.com>,
		  Matthieu Nottale  <nottale@gosta.com>

	Solve an OSX issue: two remote components *can* overlap.
	* semaphore.hxx (Semaphore::Semaphore): Pass O_EXCL so
	that we never use twice the same sem.
	Use the PID to be sure that two processes do not use the
	same sem...

2008-01-03  Akim Demaille  <demaille@gostai.com>

	Better PackageInfo use.
	* package-info.hh, package-info.cc (<<): Move into the libport
	name space.
	Report the signature instead of the full contents.
	* program-name.hh: Add CPP guards.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	Fix automake warning.
	* libport/tests/Makefile.am: By shushing automake.

2007-12-25  Akim Demaille  <demaille@gostai.com>

	More sysexits.
	* sysexits.hh (EX_FAIL): New.

2007-12-24  Akim Demaille  <demaille@gostai.com>

	Disable separate (C& c).
	* separator.hh, separator.hxx: use typename, not class.
	Disable unary separate as an attempt to work around some compiler
	limitations.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	vc++ headers do not know S_IS_DIR.
	* file-system.cc: Use _S_IFDIR fag instead of IS_DIR macro for vc++.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Define and use ATTRIBUTE_NORETURN.
	* cli.hh: Use ATTRIBUTE_NORETURN.
	* compiler.hh: Define ATTRIBUTE_NORETURN.
	* contract.hh,
	* sysexits.hh: Use ATTRIBUTE_NORETURN.

2007-12-18  Loic Fosse  <fosse@gostai.com>

	Add file-system containing is_dir.
	* Makefile.am, libport-sources.mk: Adjust.
	* file-system.cc, file-system.hh: New.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Replace __noreturn__ with noreturn.
	* cli.hh: __noreturn__->noreturn.
	* contract.hh: Remove duplicate __attribute__ handling code, include
	    compiler.hh.
